prevent background from shrinking too much

--- a/src/pages/Landing/landing.css
+++ b/src/pages/Landing/landing.css
@@ -3,6 +3,7 @@ div#landing-wrapper {
     top:0;
     left:0;
     height:100vh;
+    min-height: 800px;
     width:100%;
     background: linear-gradient(180deg, rgba(235, 27, 27, 0.2) 99.99%, rgba(235, 27, 27, 0) 100%),
     linear-gradient(180deg, #263E95 0%, rgba(196, 196, 196, 0) 100%);
